--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auramail-portal",
+  "name": "auramail-webmail",
   "version": "2.0.0",
-  "description": "Modern macOS-style email portal for AuraMail",
+  "description": "Modern webmail interface for AuraMail",
   "private": true,
   "scripts": {
     "dev": "next dev",
