fix: registration endpoint and database schema

--- a/.env
+++ b/.env
@@ -10,4 +10,11 @@ JWT_SECRET=AuraMail2024_SuperSecret_JWT_Key_For_Auth
 
 # Server Configuration
 PORT=4000
-NODE_ENV=development
+NODE_ENV=production
+
+# Database Configuration (MySQL)
+DB_HOST=localhost
+DB_USER=auramail
+DB_PASSWORD=AuraMail2024_DB_Pass
+DB_NAME=mailserver
+DB_PORT=3306 
