--- a/api-aurafarming-apache.conf
+++ b/api-aurafarming-apache.conf
@@ -19,15 +19,18 @@
     
     # CORS handled by Node.js backend - no duplicate headers
     
-    # Proxy Configuration
-    ProxyPreserveHost On
-    ProxyPass / http://localhost:4000/
-    ProxyPassReverse / http://localhost:4000/
-    
     # Handle preflight OPTIONS requests
     RewriteEngine On
     RewriteCond %{REQUEST_METHOD} OPTIONS
     RewriteRule ^(.*)$ $1 [R=200,L]
+    
+    # Portal compatibility - route /check-username to /api/check-username internally
+    RewriteRule ^/check-username$ /api/check-username [L]
+    
+    # Proxy Configuration - MUST BE AFTER REWRITE RULES
+    ProxyPreserveHost On
+    ProxyPass / http://localhost:4000/
+    ProxyPassReverse / http://localhost:4000/
     
     # Error and Access Logs
     ErrorLog ${APACHE_LOG_DIR}/api.aurafarming.co_error.log
